# faq-classifier-review

./: .gitignore  README.md  pyproject.toml
eval/: mock_llm.py  run_eval.py
eval/results/: comparison.md  pytest_output.txt  run_output.txt  v1_metrics.json  v1_results.json  v2_metrics.json  v2_results.json
improved/: classification_prompt.md  classifier.py
original/: categories.md  classification_prompt.md  classifier.py
tests/: test_classifier.py
